# BLKS

./: .gitignore  README.md  corrected-parsing.js  next.config.js  package-lock.json  package.json  tailwind.config.js
.next/: app-build-manifest.json  trace
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @ioredis.js  @noble.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @wallet-standard.js  base-x.js  bn.js.js  borsh.js  bs58.js  bufferutil.js  cluster-key-slot.js  debug.js  denque.js  dijkstrajs.js  eventemitter3.js  goober.js  has-flag.js  ioredis.js  jayson.js  lodash.defaults.js  lodash.isarguments.js  lucide-react.js  ms.js  next.js  node-fetch.js  node-gyp-build.js  pngjs.js  qrcode.js  react-hot-toast.js  redis-errors.js  redis-parser.js  rpc-websockets.js  safe-buffer.js  standard-as-callback.js  tr46.js  (+8 more)
app/: globals.css  layout.tsx  page.tsx
components/: BookmarksPage.tsx  CreatePost.tsx  CreateProfileModal.tsx  DebugPanel.tsx  Feed.tsx  IPFSStatus.tsx  Navigation.tsx  ProfilePage.tsx  ProfilePreloader.tsx  SettingsPage.tsx  Sidebar.tsx  SubBlocksPage.tsx  UserProfile.tsx  WalletContextProvider.tsx
config/: index.ts
contracts/: BlocksToken.sol  CommunityContract.sol  PostContract.sol
contracts/solana/: Cargo.toml
contracts/solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
hooks/: useBlocksProgram.ts  useBlocksProgram.ts.backup
utils/: ipfs.ts
(+367 files in other folders)
